src/test/ui/issues/issue-64792-bad-unicode-ctor.rs
struct X {}

const Y: X = X("รถ"); //~ ERROR expected function, found struct `X`

fn main() {}
